# s2client-api

examples/: CMakeLists.txt  bot_simple.cc  rendered.cc  rendered_actions.cc  save_load.cc
include/sc2api/: sc2_unit.h
include/sc2renderer/: sc2_renderer.h
maps/Minigames/: CollectMineralShards_SaveLoad.SC2Map
src/sc2renderer/: sc2_renderer.cc
